--- a/requirements.txt
+++ b/requirements.txt
@@ -56,5 +56,5 @@ typing_extensions==4.4.0
 urllib3==1.26.12
 Werkzeug==2.2.2
 wrapt==1.14.1
-wxPython @ file:///home/hiroki/Downloads/wxPython-4.2.0-cp38-cp38-linux_x86_64.whl
+wxPython==4.2.0
 zipp==3.10.0
